zuna updated builds

--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -62,23 +62,17 @@
         </script>
 
         <h2>Tier 1</h2>
-          <div><div class="btn-group btn-group-primary">
-            <button data-toggle="dropdown" class="btn btn-primary" type="button">Kael'thas</button>
-            <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-              <li><a><b>C9 iDream's Talent Order</b></a></li>
-              <li><a>Level 1 - Mana Addict</a></li>
-              <li><a>Level 4 - Gathering Power</a></li>
-              <li><a>Level 7 - Fission Bomb</a></li>
-              <li><a>Level 10 - Phoenix</a></li>
-              <li><a>Level 13 - Chain Bomb</a></li>
-              <li><a>Level 16 - Ignite</a></li>
-              <li><a>Level 20 - Bolt of the Storm</a></li>
-              <li class="divider"></li>
-              <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kaelthas">Hero Information</a></li>
-            </ul>
-          </div>
+          <div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Kael'thas</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="http://www.heroesnexus.com/talent-calculator/50-kaelthas#oPWRPRUReRIPRRyAA">Zuna's Talent Build</a></li>
+                <li class="divider"></li>
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kaelthas">Hero Information</a></li>
+              </ul>
+            </div>
             <div class="btn-group btn-group-primary">
               <button data-toggle="dropdown" class="btn btn-primary" type="button">The Lost Vikings</button>
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
@@ -104,7 +98,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/38-anubarak#jPmPgPPNKNMNGNmAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/38-anubarak#jPmPNNPNKN9MBPmAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/anubarak">Hero Information</a></li>
               </ul>
@@ -114,7 +108,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/22-muradin#jPNGEJfD6HOGMGWAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/22-muradin#jPNGEJfD0IcDGJWAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/muradin">Hero Information</a></li>
               </ul>
@@ -124,7 +118,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesfire.com/hots/talent-calculator/sylvanas#hcrC">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesfire.com/hots/talent-calculator/sylvanas#oPmPnQVQqQ_OXQvAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sylvanas">Hero Information</a></li>
               </ul>
@@ -138,7 +132,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/6-tassadar#hKmKuGlKeKpPCPGAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/6-tassadar#hKmKuGlKeKAPCPGAA">Zuna's Talent Build</a></li>
                 <li><a href="https://www.youtube.com/watch?v=SISUDJpmWoc">Video Commentary</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tassadar">Hero Information</a></li>
@@ -171,7 +165,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/18-zeratul#jPyHrClCdPIPXPSAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/18-zeratul#GPyHrClC8OZPzHSAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/zeratul">Hero Information</a></li>
               </ul>
@@ -181,7 +175,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/15-valla#oPmPMFmBDPpBVKPAA">Multishot Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/15-valla#oPmPrPmBkBdHNFPAA">Multishot Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/valla">Hero Information</a></li>
               </ul>
@@ -202,7 +196,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/26-brightwing#jPIIwPnIFIEPJPaAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/26-brightwing#jPIIuPnIFIAPJPaAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/brightwing">Hero Information</a></li>
               </ul>
@@ -212,7 +206,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/19-tyrael#9OmPIHxBxInPRJTAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/19-tyrael#9OmPYJxBxInPBPTAA">Zuna's Talent Build</a></li>
                 <li><a href="https://www.youtube.com/watch?v=sdrrA0QHuMk">Video Commentary</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tyrael">Hero Information</a></li>
@@ -227,7 +221,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/20-e-t-c#oPhPEDFDIDhAXPUAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/20-e-t-c#oP7R6RFD1RzR5RUAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/elite-tauren-chieftain">Hero Information</a></li>
               </ul>
@@ -237,7 +231,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/24-arthas#9OkPbPZD4I6IvEYAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/24-arthas#9OkPbPZDWD6IXPYAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/arthas">Hero Information</a></li>
               </ul>
@@ -247,7 +241,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/34-rehgar#jPOM1L9L3L4L7LiAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/34-rehgar#jPmPRM9L3L4LEMiAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/rehgar">Hero Information</a></li>
               </ul>
@@ -257,7 +251,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/16-malfurion#oPXK9FOB_FpPCPQAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/16-malfurion#oPXKuPOB_FpPJPQAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/malfurion">Hero Information</a></li>
               </ul>
@@ -267,7 +261,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/32-zagara#oP9KCL4K6K2KsPgAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/32-zagara#oP9KCL4KEL2KALgAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/zagara">Hero Information</a></li>
               </ul>
@@ -277,7 +271,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/39-azmodan#iNmPVNTNsNdNkNnAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/39-azmodan#iNmPVNTNsNXNkNnAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/azmodan">Hero Information</a></li>
               </ul>
@@ -287,7 +281,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/2-abathur#JOMANAFATMFOPACAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/2-abathur#IOMA5OFA6OFOPACAA">Zuna's Talent Build</a></li>
                 <li><a href="https://www.youtube.com/watch?v=91ZB8MHqpEU">Video Commentary</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/abathur">Hero Information</a></li>
@@ -298,7 +292,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/14-nova#jP6MDCiApNIPUGOAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/14-nova#jPICDCiApNIPUGOAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nova">Hero Information</a></li>
               </ul>
@@ -308,7 +302,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/7-tyrande#jPSHwPRChBpPgLHAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/7-tyrande#jPSHwPRChBEPgLHAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tyrande">Hero Information</a></li>
               </ul>
@@ -318,7 +312,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/11-falstad#aOcPiPkOdPIPHPLAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/11-falstad#aOcPiPkOdPIPYPLAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/falstad">Hero Information</a></li>
               </ul>
@@ -328,6 +322,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
+                <li><a href="http://www.heroesnexus.com/talent-calculator/49-johanna#0QhP5QzQwQnP6QxAA">Zuna's Talent Build</a></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/johanna">Hero Information</a></li>
               </ul>
             </div>
@@ -340,7 +335,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/21-diablo#oNBDbPrNzInPXFVAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/21-diablo#oPuRBDADzIVFXPVAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/diablo">Hero Information</a></li>
               </ul>
@@ -371,7 +366,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/9-tychus#7GkPbPOCdP8G_GJAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/9-tychus#7GkPbPLC2M8G_GJAA">Zuna's Talent Build</a></li>
                 <li><a href="https://www.youtube.com/watch?v=PH-xu4WgF2k">Video Commentary</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tychus">Hero Information</a></li>
@@ -382,7 +377,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/28-li-li#cOVIvPeIWIpPCPcAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/28-li-li#cOVIvPeIdOYICPcAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/li-li">Hero Information</a></li>
               </ul>
@@ -406,7 +401,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/5-gazlowe#5G2GwPZHMByGxGFAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/5-gazlowe#cOVIvPeIdOYICPcAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/gazlowe">Hero Information</a></li>
               </ul>
@@ -446,7 +441,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/13-sonya#JQKQPKxC_I/IDHNAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/13-sonya#JQKQrPxC8OZPDHNAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sonya">Hero Information</a></li>
               </ul>
@@ -456,7 +451,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">         
-                <li><a href="http://www.heroesnexus.com/talent-calculator/4-nazeebo#xHlLwPfC6OIPgCEAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/4-nazeebo#oPiCuPkCeCvHgCEAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>          
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/nazeebo">Hero Information</a></li>
               </ul>
@@ -491,6 +486,7 @@
             </div>
             <div id="collapseChanges" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
+                <li class="list-group-item"><strong>4 June 2015:</strong> Updated builds for 26 heroes</li>
                 <li class="list-group-item"><strong>3 June 2015:</strong> Added Johanna and Kael'thas to the list plus a lot of tier changes</li>
                 <li class="list-group-item"><strong>11 April 2015:</strong> Stitches & Tyrande 1→2, Diablo & Tassadar & Valla 2→1</li>
                 <li class="list-group-item"><strong>31 March 2015:</strong> Updated Builds for 14 heroes</li>
