updated last updated date

--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -31,7 +31,7 @@
         </div>
 
         <h1>Zuna's Heroes of the Storm Tier List</h1>
-        <h4>Last updated 3rd June 2015</h4>
+        <h4>Last updated 4th June 2015</h4>
 
         <style type="text/css">
         .adslot-1 { display:inline-block; float: inherit; width:468px; height:60px; }
