--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -323,6 +323,7 @@
               </button>
               <ul class="dropdown-menu">
                 <li><a href="http://www.heroesnexus.com/talent-calculator/49-johanna#0QhP5QzQwQnP6QxAA">Zuna's Talent Build</a></li>
+                <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/johanna">Hero Information</a></li>
               </ul>
             </div>
