Fix sylvanas build

--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -118,7 +118,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesfire.com/hots/talent-calculator/sylvanas#oPmPnQVQqQ_OXQvAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/47-sylvanas#oPmPnQVQqQ_OXQvAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sylvanas">Hero Information</a></li>
               </ul>
