Valla build info

--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -175,7 +175,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/15-valla#oPmPrPmBkBdHNFPAA">Multishot Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/15-valla#oPmPrPmBkBdHNFPAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/valla">Hero Information</a></li>
               </ul>
