zuna zeratul build

--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -31,7 +31,7 @@
         </div>
 
         <h1>Zuna's Heroes of the Storm Tier List</h1>
-        <h4>Last updated 4th June 2015</h4>
+        <h4>Last updated 6th June 2015</h4>
 
         <style type="text/css">
         .adslot-1 { display:inline-block; float: inherit; width:468px; height:60px; }
@@ -165,7 +165,7 @@
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/18-zeratul#GPyHrClC8OZPzHSAA">Zuna's Talent Build</a></li>
+                <li><a href="http://www.heroesnexus.com/talent-calculator/18-zeratul#GPyHrClC8OZPBPSAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/zeratul">Hero Information</a></li>
               </ul>
@@ -487,6 +487,7 @@
             </div>
             <div id="collapseChanges" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
+                <li class="list-group-item"><strong>6 June 2015:</strong> Updated build for Zeratul</li>
                 <li class="list-group-item"><strong>4 June 2015:</strong> Updated builds for 26 heroes</li>
                 <li class="list-group-item"><strong>3 June 2015:</strong> Added Johanna and Kael'thas to the list plus a lot of tier changes</li>
                 <li class="list-group-item"><strong>11 April 2015:</strong> Stitches & Tyrande 1→2, Diablo & Tassadar & Valla 2→1</li>
