--- a/free-week-rotation/2015-06-09.html
+++ b/free-week-rotation/2015-06-09.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="View the Free Week Rotation for Heroes of the Storm">
+    <meta name="description" content="June 9th -June 16th 2015 Free Week Rotation for Heroes of the Storm">
     <link rel="shortcut icon" href="18x18.ico">
-    <title>Free Hero Rotation</title>
+    <title>Free Hero Rotation (09 June 2015)</title>
 
     <!-- Bootstrap -->
     <link href="//heroesofthestorm.github.io/css/bootstrap.min.css" rel="stylesheet">
@@ -22,15 +22,15 @@
     <center>
       <div id="body">
         <div class="navigation list-group list-group-horizontal">
-          <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/kenma-tierlist" class="list-group-item">Kenma's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
-          <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
+                <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
+                <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
         </div>
 
         
         <h1>Free Week Rotation for Heroes of the Storm</h1>
+        <h4>Note: This is an older free week rotation (<a href="http://heroesofthestorm.github.io/free-hero-rotation">Click here for this week's rotation</a>)</h4>
           <div class="btn-group btn-group-primary">
             <a class="btn btn-primary">Assassin</a>
             <a class="btn btn-success">Specialist</a>
@@ -209,150 +209,6 @@
 
         <br />
 
-        <h2>June 2nd - June 9th 2015</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Diablo</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talents</b></a></li>
-            <li><a>Level 1 - Devil's Due</a></li>
-            <li><a>Level 4 - Fire Devil</a></li>
-            <li><a>Level 7 - Soul Steal</a></li>
-            <li><a>Level 10 - Lightning Breath</a></li>
-            <li><a>Level 13 - Firestorm</a></li>
-            <li><a>Level 16 - Domination</a></li>
-            <li><a>Level 20 - Hellstorm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/21-diablo#oNBDbPrNzInPXFVAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/diablo">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">E.T.C</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Rolling Like a Stone</a></li>
-            <li><a>Level 4 - Double-Necked Guitar</a></li>
-            <li><a>Level 7 - Just Keep Rockin'</a></li>
-            <li><a>Level 10 - Mosh Pit</a></li>
-            <li><a>Level 13 - Groupies</a></li>
-            <li><a>Level 16 - Speed Metal</a></li>
-            <li><a>Level 20 - Tour Bus</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/20-e-t-c#oPhPEDFDIDhAXPUAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/elite-tauren-chieftain">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Falstad</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Updraft</a></li>
-            <li><a>Level 4 - Gathering Power</a></li>
-            <li><a>Level 7 - First Aid</a></li>
-            <li><a>Level 10 - Hinterland Blast</a></li>
-            <li><a>Level 13 - Static Shield</a></li>
-            <li><a>Level 16 - Overdrive</a></li>
-            <li><a>Level 20 - Epic Mount</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/11-falstad#aOcPiPkOdPIPHPLAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/falstad">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Li Li</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Lingering Blind</a></li>
-            <li><a>Level 7 - The Good Stuff</a></li>
-            <li><a>Level 10 - Jug of 1,000 cups</a></li>
-            <li><a>Level 13 - Shrink Ray</a></li>
-            <li><a>Level 16 - Two for One</a></li>
-            <li><a>Level 20 - Kung Fu Hustle</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/28-li-li#cOVIvPeIWIpPCPcAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/li-li">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Tychus</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Armor Piercing Rounds</a></li>
-            <li><a>Level 4 - Melting Point</a></li>
-            <li><a>Level 13 - Lead Rain</a></li>
-            <li><a>Level 10 - Commander Odin</a></li>
-            <li><a>Level 13 - Relentless</a></li>
-            <li><a>Level 16 - Stoneskin</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/9-tychus#7GkPbPOCdP8G_GJAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=PH-xu4WgF2k">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tychus">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Azmodan</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Taste for Blood</a></li>
-            <li><a>Level 4 - Bound Minion</a></li>
-            <li><a>Level 7 - Infernal Globe</a></li>
-            <li><a>Level 10 - Black Pool</a></li>
-            <li><a>Level 13 - March of Sin</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Fifth Circle</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/39-azmodan#iNmPVNTNsNdNkNnAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/azmodan">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Tassadar</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Conjurer's Pursuit</a></li>
-            <li><a>Level 4 - Mental Acuity</a></li>
-            <li><a>Level 7 - Static Charge</a></li>
-            <li><a>Level 10 - Archon</a></li>
-            <li><a>Level 13 - Scryer</a></li>
-            <li><a>Level 16 - Dimensional Warp</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/6-tassadar#hKmKuGlKeKpPCPGAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=SISUDJpmWoc">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tassadar">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <br />
-
-
         <style type="text/css">
         .adslot-3 { display:inline-block; width:468px; height:60px; }
         @media (max-width:500px) { .adslot-3 { width:320px; height:100px } }
@@ -416,15 +272,17 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.3.1/jquery.cookie.min.js"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="//heroesofthestorm.github.io/js/bootstrap.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
       ga('create', 'UA-56620432-1', 'auto');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
+
     </script>
   </body>
 </html>
