--- a/free-week-rotation/index.html
+++ b/free-week-rotation/index.html
@@ -70,6 +70,9 @@
             <div id="collapseChanges" class="panel-collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
                 <li class="list-group-item">
+                  <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-06-09"><strong>09 June 2015</strong></a>
+                </li>
+                <li class="list-group-item">
                   <a href="http://heroesofthestorm.github.io/free-week-rotation/2015-06-02"><strong>02 June 2015</strong></a>
                 </li>
                 <li class="list-group-item">
