14th June update

--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -31,7 +31,7 @@
         </div>
 
         <h1>Zuna's Heroes of the Storm Tier List</h1>
-        <h4>Last updated 6th June 2015</h4>
+        <h4>Last updated 14th June 2015</h4>
 
         <style type="text/css">
         .adslot-1 { display:inline-block; float: inherit; width:468px; height:60px; }
@@ -63,16 +63,6 @@
 
         <h2>Tier 1</h2>
           <div>
-            <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-primary" type="button">Kael'thas</button>
-              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/50-kaelthas#oPWRPRUReRIPRRyAA">Zuna's Talent Build</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kaelthas">Hero Information</a></li>
-              </ul>
-            </div>
             <div class="btn-group btn-group-primary">
               <button data-toggle="dropdown" class="btn btn-primary" type="button">The Lost Vikings</button>
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
@@ -123,6 +113,16 @@
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sylvanas">Hero Information</a></li>
               </ul>
             </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Zeratul</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="http://www.heroesnexus.com/talent-calculator/18-zeratul#GPyHrClC8OZPBPSAA">Zuna's Talent Build</a></li>
+                <li class="divider"></li>
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/zeratul">Hero Information</a></li>
+              </ul>
+            </div>
           </div>
 
         <h2>Tier 2</h2>
@@ -159,16 +159,6 @@
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kerrigan">Hero Information</a></li>
              </ul>
-            </div>
-            <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-primary" type="button">Zeratul</button>
-              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/18-zeratul#GPyHrClC8OZPBPSAA">Zuna's Talent Build</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/zeratul">Hero Information</a></li>
-              </ul>
             </div>
             <div class="btn-group btn-group-primary">
               <button data-toggle="dropdown" class="btn btn-primary" type="button">Valla</button>
@@ -210,6 +200,57 @@
                 <li><a href="https://www.youtube.com/watch?v=sdrrA0QHuMk">Video Commentary</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tyrael">Hero Information</a></li>
+              </ul>
+            </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Kael'thas</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="http://www.heroesnexus.com/talent-calculator/50-kaelthas#oPWRPRUReRIPRRyAA">Zuna's Talent Build</a></li>
+                <li class="divider"></li>
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kaelthas">Hero Information</a></li>
+              </ul>
+            </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Abathur</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="http://www.heroesnexus.com/talent-calculator/2-abathur#IOMA5OFA6OFOPACAA">Zuna's Talent Build</a></li>
+                <li><a href="https://www.youtube.com/watch?v=91ZB8MHqpEU">Video Commentary</a></li>
+                <li class="divider"></li>
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/abathur">Hero Information</a></li>
+              </ul>
+            </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Zagara</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="http://www.heroesnexus.com/talent-calculator/32-zagara#oP9KCL4KEL2KALgAA">Zuna's Talent Build</a></li>
+                <li class="divider"></li>
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/zagara">Hero Information</a></li>
+              </ul>
+            </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Azmodan</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="http://www.heroesnexus.com/talent-calculator/39-azmodan#iNmPVNTNsNXNkNnAA">Zuna's Talent Build</a></li>
+                <li class="divider"></li>
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/azmodan">Hero Information</a></li>
+              </ul>
+            </div>
+            <div class="btn-group btn-group-primary">
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">Johanna</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="http://www.heroesnexus.com/talent-calculator/49-johanna#0QhP5QzQwQnP6QxAA">Zuna's Talent Build</a></li>
+                <li class="divider"></li>
+                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/johanna">Hero Information</a></li>
               </ul>
             </div>
           </div>
@@ -257,37 +298,6 @@
               </ul>
             </div>
             <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-primary" type="button">Zagara</button>
-              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/32-zagara#oP9KCL4KEL2KALgAA">Zuna's Talent Build</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/zagara">Hero Information</a></li>
-              </ul>
-            </div>
-            <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-primary" type="button">Azmodan</button>
-              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/39-azmodan#iNmPVNTNsNXNkNnAA">Zuna's Talent Build</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/azmodan">Hero Information</a></li>
-              </ul>
-            </div>
-            <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-primary" type="button">Abathur</button>
-              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/2-abathur#IOMA5OFA6OFOPACAA">Zuna's Talent Build</a></li>
-                <li><a href="https://www.youtube.com/watch?v=91ZB8MHqpEU">Video Commentary</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/abathur">Hero Information</a></li>
-              </ul>
-            </div>
-            <div class="btn-group btn-group-primary">
               <button data-toggle="dropdown" class="btn btn-primary" type="button">Nova</button>
               <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
@@ -315,16 +325,6 @@
                 <li><a href="http://www.heroesnexus.com/talent-calculator/11-falstad#aOcPiPkOdPIPYPLAA">Zuna's Talent Build</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.heroesfire.com/hots/wiki/heroes/falstad">Hero Information</a></li>
-              </ul>
-            </div>
-            <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-primary" type="button">Johanna</button>
-              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="http://www.heroesnexus.com/talent-calculator/49-johanna#0QhP5QzQwQnP6QxAA">Zuna's Talent Build</a></li>
-                <li class="divider"></li>
-                <li><a href="http://www.heroesfire.com/hots/wiki/heroes/johanna">Hero Information</a></li>
               </ul>
             </div>
           </div>
@@ -487,6 +487,7 @@
             </div>
             <div id="collapseChanges" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
+                <li class="list-group-item"><strong>14 June 2015:</strong> Zeratul 2→1, Kael 2→1, Abathur & Zagara & Azmodan & Johanna 3→2</li>
                 <li class="list-group-item"><strong>6 June 2015:</strong> Updated build for Zeratul</li>
                 <li class="list-group-item"><strong>4 June 2015:</strong> Updated builds for 26 heroes</li>
                 <li class="list-group-item"><strong>3 June 2015:</strong> Added Johanna and Kael'thas to the list plus a lot of tier changes</li>
