--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -107,25 +107,6 @@
           </ul>
         </div>
         <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Jaina</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Deep Chill</a></li>
-            <li><a>Level 4 - Envenom</a></li>
-            <li><a>Level 7 - Frostbitten</a></li>
-            <li><a>Level 10 - Water Elemental</a></li>
-            <li><a>Level 13 - Sprint</a></li>
-            <li><a>Level 16 - Numbing Blast</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/41-jaina#oP_NwPtN2N_O9NpAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/jaina">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
           <button data-toggle="dropdown" class="btn btn-primary" type="button">Kerrigan</button>
           <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
           </button>
@@ -143,6 +124,25 @@
             <li><a href="https://www.youtube.com/watch?v=t8yB4yiBtWk">Video Commentary</a></li>
             <li class="divider"></li>
             <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kerrigan">Hero Information</a></li>
+          </ul>
+        </div>
+        <div class="btn-group btn-group-primary">
+          <button data-toggle="dropdown" class="btn btn-info" type="button">Malfurion</button>
+          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a><b>C9 iDream's Talent Order</b></a></li>
+            <li><a>Level 1 - Scouting Drone</a></li>
+            <li><a>Level 4 - Protective Shield</a></li>
+            <li><a>Level 7 - Elune's Grace</a></li>
+            <li><a>Level 10 - Tranquility</a></li>
+            <li><a>Level 13 - Ice Block</a></li>
+            <li><a>Level 16 - Tenacious Roots</a></li>
+            <li><a>Level 20 - Storm Shield</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesnexus.com/talent-calculator/16-malfurion#oPXKuPOB_FpPJPQAA">Zuna's Talent Build</a></li>
+            <li class="divider"></li>
+            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/malfurion">Hero Information</a></li>
           </ul>
         </div>
         <div class="btn-group btn-group-primary">
